[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Scripts/AvionMovimiento.gd" type="Script" id=1]
[ext_resource path="res://src/Models/airplane_v2_L2.123c71795678-4b63-46c4-b2c6-549c45f4c806/11805_airplane_v2_L2.obj" type="ArrayMesh" id=2]
[ext_resource path="res://src/Models/antiaircraft-gun/source/Antiaircraft_gun/Antiaircraft_gun.obj" type="ArrayMesh" id=3]
[ext_resource path="res://src/Scripts/antiaEreo.gd" type="Script" id=4]

[sub_resource type="Skin" id=5]

[sub_resource type="CapsuleShape" id=7]
height = 0.650443

[sub_resource type="CubeMesh" id=1]

[sub_resource type="GradientTexture2D" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.835294, 0.447059, 0.447059, 1 )
metallic = 1.0
roughness = 0.37
roughness_texture = SubResource( 2 )
refraction_enabled = true
refraction_scale = 0.05
refraction_texture_channel = 0

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="SphereShape" id=6]

[node name="World" type="Spatial"]

[node name="Avion" type="Camera" parent="." groups=["Player"]]
transform = Transform( 0.999997, 0.00221591, -0.000720582, -0.00221333, 0.999991, 0.00356537, 0.000728476, -0.00356376, 0.999993, 0, 9.83, 7.94067 )
fov = 67.7
far = 8192.0
script = ExtResource( 1 )

[node name="Plane_modelo" type="MeshInstance" parent="Avion"]
transform = Transform( 0.01, -2.27374e-12, -6.30429e-12, -5.34683e-13, -4.36557e-10, 0.01, 1.36424e-12, -0.01, -4.29281e-10, -5.58794e-09, -5.5777, -13.2438 )
mesh = ExtResource( 2 )
skin = SubResource( 5 )
skeleton = NodePath("../..")

[node name="Position3D" type="Position3D" parent="Avion"]
transform = Transform( 1, -4.01246e-09, 0, -4.94265e-09, 1, 0, 0, -6.98492e-10, 1, -0.0276309, -3.714, -19.7451 )

[node name="Area" type="Area" parent="Avion"]
transform = Transform( 1, -9.8612e-10, 0, -1.21736e-09, 1, 0, 0, -2.32831e-10, 1, -0.000425495, -1.86679, -6.33117 )

[node name="CollisionShape" type="CollisionShape" parent="Avion/Area"]
transform = Transform( 1, -8.62198e-06, 0.00241931, -8.62661e-06, 1.00004, -0.0118355, 0.00241931, -0.0118355, 4.32104, -0.00107807, -1.72506, -6.80091 )
shape = SubResource( 7 )

[node name="Spatial" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Spatial"]
transform = Transform( 400, 0, 0, 0, 1, 0, 0, 0, 400, -10.6732, -0.978639, -26.3704 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="Spatial"]
transform = Transform( 20, 0, 0, 0, 200, 0, 0, 0, 20, 182.006, -15.9995, -239.671 )
mesh = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="Spatial"]
transform = Transform( 20, 0, 0, 0, 200, 0, 0, 0, 20, -181.183, -15.9995, -239.671 )
mesh = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="Spatial"]
transform = Transform( 20, 0, 0, 0, 200, 0, 0, 0, 20, -181.183, -15.9995, 109.393 )
mesh = SubResource( 4 )

[node name="MeshInstance5" type="MeshInstance" parent="Spatial"]
transform = Transform( 20, 0, 0, 0, 200, 0, 0, 0, 20, 140.817, -15.9995, 109.393 )
mesh = SubResource( 4 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.7221, 0, -139.193 )
script = ExtResource( 4 )

[node name="Antiaircraft_gun" type="MeshInstance" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 41.6611, 1.78015, -89.7754 )
mesh = ExtResource( 3 )

[node name="Deteccion" type="CollisionShape" parent="Area"]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 39.3516, 13.0661, -89.8873 )
shape = SubResource( 6 )

[node name="RayCast" type="RayCast" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 39.4878, 5.60048, -90.0796 )

[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
